--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Transact Status",
   "short_name": "Transact",
-  "start_url": "/",
+  "start_url": "/TransactStatus/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/Transact.png",
+      "src": "/TransactStatus/Transact.png",
       "sizes": "192x192",
       "type": "image/png"
     }
